--- a/18960-h/18960-h.htm
+++ b/18960-h/18960-h.htm
@@ -2427,7 +2427,7 @@ friends were observing his changed estate. You understand?"</p>
 beamed, the white hand was extended, and the subtle seductiveness of
 beauty had its way once more. Men are never so old, so humble, or so
 ignorant as to be insensible to the charm. Faithful old Reynolds took
-the lovely soft hand in both of his, and bent his white head and kissedit.</p>
+the lovely soft hand in both of his, and bent his white head and kissed it.</p>
 
 <p><span class='pagenum'><a name="Page_74" id="Page_74">[Pg 74]</a></span>"Even he shall not know," he said; and the next moment she was
 gone&mdash;this time not across the moonlit field path to the cliff, but into
@@ -5474,7 +5474,7 @@ I cannot help loving John Dacre, and I should like to die with him."</p>
 <p>Richard Lincoln gazed at her in amazement. There was pride, too, in his
 glance. He saw in her transfigured face a repetition of his own youth
 when the spirit soared impatient of restraint and knew not yet the curbs
-that check the extravagance o&pound; ardent natures. In those early days he
+that check the extravagance of ardent natures. In those early days he
 had struck out for the ideal right, even as her heart in the fulness of
 its love poured out its tide of passion. He held out his hands to her,
 and his lips trembled.</p>
